--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -18,6 +18,7 @@
     </main>
 
     {% include "global/partials/footer.html" %}
+    <script src="{% static 'global/js/scripts.js' %}"></script>
 </body>
 
 </html>
