--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -4,7 +4,7 @@
 
 <head>
     {% include "global/partials/head.html" %}
-    <title>{% block title%}{% endblock title %} global</title>
+    <title>{% block title%}{% endblock title %} Django Recipes</title>
 </head>
 
 <body>
